<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282828">


    <Button
        android:id="@+id/addActivity"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:backgroundTint="#FF0000"
        android:text="Add activity"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayoutCompany" />

    <TextView
        android:id="@+id/start3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="Date:"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/duration2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hour(s)"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/durationTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toEndOf="@+id/durationTime"
        app:layout_constraintTop_toTopOf="@+id/durationTime"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/chooseTimeStart"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="00:00"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/start"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/start"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/durationTime"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="1"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/chooseTimeStart"
        app:layout_constraintEnd_toEndOf="@+id/duration"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/duration"
        app:layout_constraintTop_toTopOf="@+id/chooseTimeStart"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/start"
        android:layout_width="120dp"
        android:layout_height="31dp"
        android:layout_marginStart="28dp"
        android:text="Start at:"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start3"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/start4"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginBottom="440dp"
        android:text="Activity:"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gridLayout"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/gridLayout"
        app:layout_constraintTop_toBottomOf="@+id/durationTime"
        app:layout_constraintVertical_bias="0.362" />


    <!--this will be last time inputed-->


    <!--this will be 1 hour extra of from as default-->

    <TextView
        android:id="@+id/start6"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginBottom="156dp"
        android:text="Company:"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gridLayoutCompany"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/gridLayoutCompany"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.287" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="120dp"
        android:layout_height="31dp"
        android:text="Duration:"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/chooseDate"
        app:layout_constraintTop_toTopOf="@+id/start"
        app:layout_constraintVertical_bias="1.0" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start4"
        app:layout_constraintVertical_bias="0.060000002">

        <Button
            android:id="@+id/sleep"
            android:layout_width="130dp"
            android:backgroundTint="#00A8F4"
            android:onClick="selectChoice"
            android:text="sleep"
            android:textSize="23dp" />

        <Button
            android:id="@+id/eating"
            android:layout_width="130dp"
            android:backgroundTint="#348137"
            android:onClick="selectChoice"
            android:text="eating"
            android:textSize="23dp" />

        <Button
            android:id="@+id/leisure"
            android:layout_width="130dp"
            android:backgroundTint="#FF5722"
            android:onClick="selectChoice"
            android:text="leisure"
            android:textSize="23dp" />

        <Button
            android:id="@+id/school"
            android:layout_width="130dp"
            android:backgroundTint="#6A10D3"
            android:onClick="selectChoice"
            android:text="school"
            android:textSize="23dp" />

        <Button
            android:id="@+id/paid_job"
            android:layout_width="130dp"
            android:backgroundTint="#07BA96"
            android:onClick="selectChoice"
            android:text="paid job"
            android:textSize="23dp" />

        <Button
            android:id="@+id/hmwork"
            android:layout_width="130dp"
            android:backgroundTint="#FFC107"
            android:onClick="selectChoice"
            android:text="hmwork"
            android:textSize="23dp" />

        <Button
            android:id="@+id/errands"
            android:layout_width="130dp"
            android:backgroundTint="#E91E63"
            android:onClick="selectChoice"
            android:text="errands"
            android:textSize="23dp" />

        <Button
            android:id="@+id/exercise"
            android:layout_width="130dp"
            android:backgroundTint="#1F37BC"
            android:onClick="selectChoice"
            android:text="exercise"
            android:textSize="23dp" />

        <Button
            android:id="@+id/travel"
            android:layout_width="130dp"
            android:backgroundTint="#CDDC39"
            android:onClick="selectChoice"
            android:text="travel"
            android:textSize="23dp" />

        <Button
            android:id="@+id/social"
            android:layout_width="130dp"
            android:backgroundTint="#8BC34A"
            android:onClick="selectChoice"
            android:text="social"
            android:textSize="23dp" />

        <Button
            android:id="@+id/health"
            android:layout_width="130dp"
            android:backgroundTint="#9C27B0"
            android:onClick="selectChoice"
            android:text="health"
            android:textSize="23dp" />

        <Button
            android:id="@+id/dating"
            android:layout_width="130dp"
            android:backgroundTint="#06D0EA"
            android:onClick="selectChoice"
            android:text="dating"
            android:textSize="23dp" />

    </GridLayout>

    <TextView
        android:id="@+id/chooseDate"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:inputType="date"
        android:text="0001/01/01"
        android:textColor="#FFFFFF"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/start3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toEndOf="@+id/start3"
        app:layout_constraintTop_toTopOf="@+id/start3"
        app:layout_constraintVertical_bias="0.0" />

    <GridLayout
        android:id="@+id/gridLayoutCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start6"
        app:layout_constraintVertical_bias="0.16000003">

        <Button
            android:id="@+id/alone"
            android:layout_width="130dp"
            android:backgroundTint="#FFFFFF"
            android:onClick="selectChoice"
            android:text="alone"
            android:textSize="23dp" />

        <Button
            android:id="@+id/partner"
            android:layout_width="130dp"
            android:backgroundTint="#D3D3D3"
            android:onClick="selectChoice"
            android:text="partner"
            android:textSize="23dp" />

        <Button
            android:id="@+id/friends"
            android:layout_width="130dp"
            android:backgroundTint="#AAAAAA"
            android:onClick="selectChoice"
            android:text="friends"
            android:textSize="23dp" />

        <Button
            android:id="@+id/family"
            android:layout_width="130dp"
            android:layout_row="1"
            android:layout_column="0"
            android:backgroundTint="#7D7D7D"
            android:onClick="selectChoice"
            android:text="family"
            android:textSize="23dp" />

        <Button
            android:id="@+id/coworkers"
            android:layout_width="260dp"
            android:layout_columnSpan="2"
            android:backgroundTint="#454545"
            android:onClick="selectChoice"
            android:text="co-workers"
            android:textSize="23dp" />


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>